fixed font awesome

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<meta name="twitter:app:id:iphone" content="994182280">
 	<title>Genie - Granting Wishes Instantly</title>
 	<link href="css/index.css" rel="stylesheet">
-	<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
 </head>
 <body>
