--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
 
 		<!-- IPHONE -->
 			<div class="responsive iphone">
-				<div class="iphone-screenshot"></div>
+				<div class="iphone-screenshot">
 				<img class="iphone-mask" src="images/iphone_new.png"/>
+				</div>
 				<img class = "app_store fadeIn" src="images/app_store.png"/>
 			</div>
 		<!-- APP STORE -->
@@ -66,7 +67,8 @@
 
 			<div class="app-icon_fake">
 				<img alt="App icon" src="images/white.png">
-				<p>Genie</p>
+				<br>
+				<br>
 			</div>
 
 			<!-- GENIE-SIDE -->
